# reactive-curl-android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/reactivex/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  rx-curl.hpp  rx-request-manager.cpp  rx-request-manager.hpp  types.hpp
app/src/main/java/com/example/reactivex/: DisplayMessageActivity.java  MainActivity.java
app/src/main/java/com/example/reactivex/network/: NetworkManager.java
app/src/main/jniLibs/arm64-v8a/share/cmake/yaml-cpp/: yaml-cpp-targets-debug.cmake
app/src/main/jniLibs/arm64-v8a/share/pkgconfig/: nlohmann_json.pc  yaml-cpp.pc
app/src/main/jniLibs/armeabi-v7a/share/cmake/yaml-cpp/: yaml-cpp-config-version.cmake
app/src/main/jniLibs/armeabi-v7a/share/pkgconfig/: nlohmann_json.pc  yaml-cpp.pc
app/src/main/jniLibs/x86/share/pkgconfig/: nlohmann_json.pc  yaml-cpp.pc
app/src/main/jniLibs/x86_64/share/pkgconfig/: nlohmann_json.pc  yaml-cpp.pc
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/reactivex/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
